--- a/Rampastring.XNAUI.csproj
+++ b/Rampastring.XNAUI.csproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetLoader.cs" />
+    <Compile Include="LocaleProvider.cs" />
     <Compile Include="GUICreator.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="EnhancedSoundEffect.cs" />
